--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -18,12 +18,37 @@
     </p>
     <hr />
     <div id="controls" class="hidden">
-      
+      <!-- Device Info Table -->
+      <table class="device-info-table">
+        <tr>
+          <th class="device-info-cell device-info-key">Name</th>
+          <td class="device-info-cell device-info-val" id="device-name"></td>
+        </tr>
+        <tr>
+          <th class="device-info-cell device-info-key">ID</th>
+          <td class="device-info-cell device-info-val" id="device-id"></td>
+        </tr>
+        <tr>
+          <th class="device-info-cell device-info-key">PSDI</th>
+          <td class="device-info-cell device-info-val" id="device-psdi"></td>
+        </tr>
+        <tr>
+          <th class="device-info-cell device-info-key">Button state</th>
+          <td class="device-info-cell device-info-val">
+            <button id="btn-state" class="btn btn-state" disabled>Released</button>
+          </td>
+        </tr>
+        <tr>
+          <th class="device-info-cell device-info-key">Click count</th>
+          <td class="device-info-cell device-info-val" id="click-count">0</td>
+        </tr>
+      </table>
+      <hr />
       <!-- Toggle LED -->
       <p>
         <button id="btn-led-toggle" class="btn btn-led-toggle" onclick="handlerToggleLed()">Switch LED ON</button>
       </p>
-      
+      <hr />
     </div>
   </body>
 
