初期のボタンのテキストを変更

--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -21,7 +21,7 @@
       <!-- Device Info Table -->
       <!-- Toggle LED -->
       <p>
-        <button id="btn-led-toggle" class="btn btn-led-toggle" onclick="handlerToggleLed()">Switch LED ON</button>
+        <button id="btn-led-toggle" class="btn btn-led-toggle" onclick="handlerToggleLed()">パトランプON</button>
       </p>
       <hr />
     </div>
