--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -13,14 +13,14 @@
     <h2>パトランプを回そう！！</h2>
     <hr />
     <p>
-      <img id="loading-animation" class="" src="loading.gif" height="14px" />
+      <img id="loading-animation" class="" src="./assets/loading.gif" height="14px" />
       <span id="status" class="inactive">Device disconnected</span>
     </p>
     <hr />
     <div id="controls" class="hidden">
-      <!-- Device Info Table -->
       <!-- Toggle LED -->
       <p>
+        <img id="patlamp" class="" src="./assets/pato_lamp_on_red.png" />
         <button id="btn-led-toggle" class="btn btn-led-toggle" onclick="handlerToggleLed()">パトランプON</button>
       </p>
       <hr />
