--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -20,7 +20,8 @@
     <div id="controls" class="hidden">
       <!-- Toggle LED -->
       <p>
-        <img id="patlamp" class="" src="./assets/pato_lamp_on_red.png" />
+        <img id="patolamp" class="patolamp-off" src="./assets/pato_lamp_off_red.png" />
+        <img id="patolamp" class="patolamp-on" src="./assets/pato_lamp_on_red.png" />
         <button id="btn-led-toggle" class="btn btn-led-toggle" onclick="handlerToggleLed()">パトランプON</button>
       </p>
       <hr />
