modified:   liff-app/index.html

--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -20,7 +20,7 @@
     <div id="controls" class="hidden">
       <!-- Toggle LED -->
       <p>
-        <img id="patolamp" class="patolamp-off" src="./assets/pato_lamp_off_red.png" height="130px" />
+        <img id="patolamp" class="patolamp-off" src="./assets/pato_lamp_off_red.png" /><br>
         <button id="btn-led-toggle" class="btn btn-led-toggle" onclick="handlerToggleLed()">パトランプON</button>
       </p>
       <hr />
